assets/styles.css
* {
    box-sizing: content-box;
    padding: 0;
    margin: 0;
    background-color: black;
}

header{
    margin: 0px;
    padding: 0px;
}
nav{
   
    float: right;
    margin-top: -20px;
    margin-right: 20px;
}
nav ul{
 
    list-style-type: none;
}

nav li{
 
    margin-left: 25px ;
    display: inline-block;
    font-size: 24px;   
}

a{
    color: white;
    text-decoration:none;
    font-family: fantasy;
}
a:hover{
    background-color: red;
    transition-property: width;
    transition-timing-function: ease-in-out;

}
.banner{
    margin-top: 20px;
    margin-bottom: 20px;
    display:flex;
    max-height: 100px;
    width: 100%;
}

header h2{
    margin-top: 20px;
    width: fit-content;
    color: white;
    margin-left: 10px;
    font-family: fantasy;
    font-size: 36px;

}

header figure{
    display: none;
}


.gridcontainer{
    display: grid;
    grid-template-columns:30% 70%;
    grid-template-rows: fit-content(100%) fit-content(100%) fit-content(100%);
    
}
.containerL{
    justify-content: left;
    margin-left: 20px;
    margin-right: 10px;
    text-align: end;
    flex: 1 1 ;
    color: white;
    border-right: 5px solid red;
    background-color: rgb(24, 22, 22);
    font-family: fantasy;
    font-size: 48px;
    padding-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.containerL-1{
    min-width: 50px;
    min-height: 100px;

}
.containerL-2{
    min-width: 50px;
    min-height: 100px;
}
.containerL-3{
    min-width: 50px;
    min-height: 100px;
}
.containerR{
    justify-content: right;
    margin-left: 10px;
    margin-right: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: rgb(24, 22, 22);
    color: white;
}
.containerR-1{
    min-width: 50px;
    min-height: 100px;
}
.containerR-2{
    min-width: 50px;
    min-height: 100px;
}
.containerR-3{
    min-width: 50px;
    min-height: 100px;
}

footer{
    display: flex;
    justify-content: center;

}

footer h4{
    margin-top: 20px;
    margin-bottom: 20px;
    color: white;
    text-align:center;

}
@media screen and (max-width:768px){
    
    header h2{
    display:none;}
    
    header figure{
    display: flex;
 
    }
    
    .gridcontainer{
        grid-template-columns: 100%;
        grid-template-rows: fit-content(100%) fit-content(100%) fit-content(100%);
        
    }
    header nav{
        display: none;
    }
    .buttlinks{
        display: flex;
        flex-direction: row;
        align-self: center;
       
     
    }
    .imgbutt{
        display: flex;
        width: 90%;
        margin: 10px;
    }
    
    .containerL{
        display: none;
    }
    .containerR{
        justify-self: center;
        padding-left: 40px;
        padding-right: 40px;        
        background-color: rgb(24, 22, 22);
    }
    

    .containerR-1{
        padding-left: 40px;
        padding-right: 40px; 
        width: 100%;
        min-height: 100px;
      
    }
    .containerR-2{
        
        width: 100%;
        min-height: 100px;
    }
    .containerR-3{
        
        width: 100%;
        min-height: 100px;
    }

}

    

